fuchicorp-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    certmanager.k8s.io/cluster-issuer: letsencrypt-fuchicorp-prod
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: “true”
  name: fuchicorp-ingress
  namespace: tools
spec:
  rules:
  - host: grafana.fuchicorp.com
    http:
      paths:
      - backend:
          serviceName: grafana-service
          servicePort: 8080
  - host: jenkins.fuchicorp.com
    http:
      paths:
      - backend:
          serviceName: jenkins-service
          servicePort: 8081
  - host: jira.fuchicorp.com
    http:
      paths:
      - backend:
          serviceName: jira-service
          servicePort: 8082
  - host: nexus.fuchicorp.com
    http:
      paths:
      - backend:
          serviceName: nexus-service
          servicePort: 8083
  - host: vault.fuchicorp.com
    http:
      paths:
      - backend:
          serviceName: vault-service
          servicePort: 8084
  tls:
  - hosts:
    - jenkins.fuchicorp.com
    - jira.fuchicorp.com
    - nexus.fuchicorp.com
    - vault.fuchicorp.com
    - grafana.fuchicorp.com
    secretName: tls-prod-cert
